HSEARCH-4632 Avoid warning related to --illegal-access=deny when testing on JDK17+