@@ -526,7 +526,6 @@
         <!-- JVM args to be customized depending on the Java version -->
         <surefire.jvm.args.java-version>
             -Djdk.attach.allowAttachSelf=true
-            --illegal-access=deny
         </surefire.jvm.args.java-version>
         <!-- JVM args generated by JaCoCo -->
         <surefire.jvm.args.jacoco></surefire.jvm.args.jacoco>
@@ -2488,6 +2487,11 @@
                 </property>
             </activation>
             <properties>
+                <!-- illegal-access=deny is not the default yet in JDK 11  -->
+                <surefire.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                    --illegal-access=deny
+                </surefire.jvm.args.java-version>
                 <!-- Tests specific to Java 17+ won't work with JDK 11, so we disable them. -->
                 <java-version.test.java17.add-main-source-phase>none</java-version.test.java17.add-main-source-phase>
                 <java-version.test.java17.add-test-source-phase>none</java-version.test.java17.add-test-source-phase>
